Updated repository input validation

--- a/frontend/templates/home/issues.html
+++ b/frontend/templates/home/issues.html
@@ -1,7 +1,7 @@
 {{ define "home/issues.html" }}
 
 <!-- Row 2 -->
-<div hidden class="row" id="issues-container">
+<div class="row" id="issues-container">
     <div class="col box-3">
         <div class="input-group input-group-lg">
             <span class="input-group-text"># of Issues</span>
