--- a/frontend/templates/home/repository-modal.html
+++ b/frontend/templates/home/repository-modal.html
@@ -13,12 +13,12 @@
                     
                 <div class="input-group mb-3">
                     <div class="form-floating">
-                        <input type="email" class="form-control" id="owner-input" placeholder="Owner" required>
+                        <input type="text" class="form-control" id="owner-input" placeholder="Owner" required>
                         <label for="floatingInput">Owner</label>
                       </div>
                     <span class="input-group-text">/</span>
                     <div class="form-floating">
-                        <input type="email" class="form-control" id="repository-input" placeholder="Repository" required>
+                        <input type="text" class="form-control" id="repository-input" placeholder="Repository" required>
                         <label for="floatingInput">Repository</label>
                       </div>
                 </div>
